# CONAN

./: .gitignore  .readthedocs.yml  CONAN3_notebook.ipynb  Example_CONAN3_from_configfile.ipynb  LICENSE  README.md  bench_occultquad.py  change_log.rst  conan_cmd_fit.py  logprob_multi_sin_ce_v1.py  occultnl.f  occultquad.f  plots_v12_and.py  pyproject.toml  requirements.txt  sample_config.yaml  setup.py
.github/workflows/: python-package.yml  python-publish-pypi.yml  python-publish.yml
.ipynb_checkpoints/: CONAN3_notebook-checkpoint.ipynb
CONAN/: VERSION.py  __init__.py  _classes.py  basecoeff_setup.py  conf.py  euler_fit_script.py  fit_data.py  funcs.py  geepee.py  get_files.py  logprob_multi.py  misc.py  models.py  occultquad.f  occultquad_numba.py  occultquad_pya.py  outputs.py  plotting.py  priors.py  utils.py
CONAN3/: GRtest_v1.py  RVmodel_v3.py  __init__.py  __version__.py  _classes.py  basecoeff_setup.py  basecoeff_v14_LM copy.py  basecoeff_v14_LM.py  celeritenew.py  conanGP_v33.py  conf.py  corfac_v8.py  ecc_om_par.py  euler_fit_script.py  fit_data copy.py  fit_data.py  fit_data_bkup.py  funcs.py  geepee.py  get_files.py  gpnew.py  groupweights_v2.py  logprob_multi.py  logprob_multi_sin_v4.py  misc.py  model_GP_v3.py  models.py  occultquad_pya.py  outputs.py  outputs_v6_GP.py  plots_v12.py  plotting.py  utils.py
CONAN3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Notebooks/K2-233_spleaf_3D_GP/: k2-233_lcrv_spleaf_multiGP.yaml  k2-233_reanalysis.ipynb  readme.md
Notebooks/KELT-20/: gp_config.yaml  kelt-20_cheops_roll_compare.ipynb  kelt-20_conan_roll_gp-duration.ipynb  kelt-20_conan_spline.ipynb  readme.md  sine_config.yaml  spl_config.yaml
Notebooks/TOI-216/: TOI-216_TTV-test_fit.ipynb  TOI216_ttvconfig.yaml  readme.md
Notebooks/TOI469/: TOI469_lc_rvconfig.yaml  TOI469_multiplanet_LC_RV.ipynb  readme.md
Notebooks/WASP-103/: WASP-103_2D-GP-george.ipynb  WASP-103_custom_LC_function.ipynb  WASP103_CHEOPS_2D_GP_george.yaml  WASP103_CHEOPS_custom_func.yaml  readme.md
Notebooks/WASP-121_phasecurve/: WASP121_TESS_config.yaml  readme.md
Notebooks/WASP-127/: readme.md
Notebooks/WASP-127/WASP127_LC_RV/: readme.md  (+3 more)
Notebooks/george_2D_GP/: WASP-103_2D-GP-george.ipynb  WASP103_CHEOPS_2D_GP_george.yaml  readme.md
docs/: api.md  build.sh  changes.rst  classes.rst  conf.py  config_files.md  index.md  index.rst  installation.md  installation.rst  quick_fit.md  requirements.txt
docs/_autoapi_templates/: index.rst
docs/_static/: gurubase-widget.js
docs/config_files/: dat_config.md  yaml_config.md
docs/tutorial/: CONAN_WASP-127_LC_RV_tutorial.ipynb  CONAN_WASP-127_RV_tutorial.ipynb  CONAN_WASP127_EULER.ipynb  TOI469_multiplanet_LC_RV.ipynb  WASP-103_2D-GP-george.ipynb  WASP121_TESS_pc.ipynb  kelt-20_cheops_roll_compare.ipynb
example/: Example_CONAN3_from_configfile.ipynb  exoplanet.eu_catalog.csv
example/auto_get_decorr/: CONAN_tutorial_interactive.ipynb  CONAN_tutorial_interactive2.py
example/depth_variation_celerite/: CONAN_tutorial.ipynb
joss/: paper.bib  paper.md
tests/: custom_LCfunc.py  test_LCmodel.py  test_RV.py  test_gp.py  test_objects.py  test_transit.py
w127_lcs/: w127_pipe1.txt  w127_pipe2.txt  w127_pipe3.txt  w127_pipe4.txt
(+8 files in other folders)
