[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools==68.2.2", "numpy==2.1.3"
            ]

[project]
name = "conan-exoplanet"
version = "3.3.10"
authors = [
    {name = "Babatunde Akinsanmi", email = "tunde.akinsanmi@unige.ch"},
    {name = "Monika Lendl", email = "monika.lendl@unige.ch"}
]
maintainers = [
    {name = "Babatunde Akinsanmi", email = "tunde.akinsanmi@unige.ch"}
]

description = "COde for exoplaNet ANalysis"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "chainconsumer==1.1.2",
    "scipy",
    "pandas",
    "lmfit",
    "dynesty",
    "astropy",
    "astroquery",
    "celerite",
    "corner",
    "lightkurve",
    "dill",
    "dace_query",
    "matplotlib",
    "emcee",
    "george",
    "ldtk ==1.7.0",
    "tqdm",
    "spleaf",
    "numba"
]

[project.urls]
Homepage   = "https://github.com/titans-ge/CONAN"
Repository = "https://github.com/titans-ge/CONAN"
Documentation = "https://conan-exoplanet.readthedocs.io/en/latest/"
Changelog = "https://github.com/titans-ge/CONAN/blob/main/change_log.rst"
Issues = "https://github.com/titans-ge/CONAN/issues"


#optional dpendency for tests
[project.optional-dependencies]
test = ["pytest","batman-package","radvel","h5py"]


#pytests
[tool.pytest.ini_options]
addopts = ["-v", "-p", "no:warnings"]

    